# C-_Projects_Manager

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GITHUB_INTEGRATION.md  LICENSE  README.md  README_FEATURES.md  build.sh  run.sh
.github/workflows/: build-and-release.yml  ci.yml
include/: MainWindow.h  Workspace.h  WorkspaceManager.h
scripts/: README.md  clean-all.sh  debug.sh  github-release.sh  install-deps.sh  install-system-wide.sh  package.sh  setup.sh  uninstall-system-wide.sh
src/: MainWindow.cpp  Workspace.cpp  WorkspaceManager.cpp
